[package]
name = "feh-sim-seed"
version = "0.1.0"
authors = ["Minno"]
edition = "2018"
license = "MIT"


[lib]
crate-type = ["cdylib"]


[dependencies]
seed = "0.3.5"
wasm-bindgen = "0.2.42"
futures = "0.1.26"
strum = "0.15.0"
strum_macros = "0.15.0"

[dependencies.rand]
version = "0.6.5"
default-features = false
features = ["wasm-bindgen", "std"]

[dependencies.web-sys]
version = "0.3.19"
features = ["Performance"]

[profile.release]
lto = true
panic = "abort"