[package]
name = "feh-sim-seed"
version = "0.1.0"
authors = ["Minno"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.6.0"
wasm-bindgen = "0.2.58"
futures = "0.3.4"
strum = "0.17.1"
strum_macros = "0.17.1"
serde = "1.0.104"
base64 = "0.11.0"
bincode = "1.2.1"

[dependencies.rand]
version = "0.7.3"
default-features = false
features = ["wasm-bindgen", "std", "small_rng"]

[dependencies.web-sys]
version = "0.3.35"
features = ["Performance", "SvgsvgElement", "Element", "DomRect"]

[profile.release]
lto = true
panic = "abort"
